web/app/styles/utilities/_text.scss
// Text utils
// ===


// Font-Family
// ---

.u-text-family {
    font-family: $font-family !important;
}

.u-text-family-header {
    font-family: $header-font-family !important;

    // Added with webfontloader. See loadFonts() in app/container.js
    .wf-active & {
        font-family: $loaded-header-font-family !important; // TODO: Remove !important
    }
}

.u-text-family-loaded {
    font-family: $loaded-header-font-family !important;
}


// Weights & Style
// ---

.u-text-thin {
    font-weight: $font-weight-thin !important;
}

.u-text-extra-light {
    font-weight: $font-weight-extra-light !important;
}

.u-text-light {
    font-weight: $font-weight-light !important;
}

.u-text-regular {
    font-weight: $font-weight-regular !important;
}

.u-text-medium {
    font-weight: $font-weight-medium !important;
}

.u-text-semi-bold {
    font-weight: $font-weight-semi-bold !important;
}

.u-text-bold {
    font-weight: $font-weight-bold !important;
}

.u-text-italic {
    font-style: italic !important;
}

.u-text-quiet {
    color: $neutral-50 !important;
    font-size: $small-font-size !important;

    fill: $neutral-50 !important;
}


// Size
// ---

.u-text-size-smaller {
    font-size: $smaller-font-size !important;
}

.u-text-size-small {
    font-size: $small-font-size !important;
}

.u-text-size-base {
    font-size: $font-size !important;
}

.u-text-size-big {
    font-size: $big-font-size !important;
}

.u-text-size-bigger {
    font-size: $bigger-font-size !important;
}

.u-text-size-huge {
    font-size: $huge-font-size !important;
}


// Line Height
// ---

.u-text-height-0 {
    line-height: 0 !important;
}

.u-text-height-tiny {
    line-height: $tiny-line-height !important;
}

.u-text-height-smaller {
    line-height: $smaller-line-height !important;
}

.u-text-height-small {
    line-height: $small-line-height !important;
}

.u-text-height-base {
    line-height: $line-height !important;
}

.u-text-height-big {
    line-height: $big-line-height !important;
}

.u-text-height-bigger {
    line-height: $bigger-line-height !important;
}

.u-text-height-huge {
    line-height: $huge-line-height !important;
}


// Letter Spacing
// ---

.u-text-letter-spacing {
    letter-spacing: 1px !important;
}

.u-text-letter-spacing-normal {
    letter-spacing: initial !important;
}


// Text Alignment
// ---

.u-text-align-start {
    text-align: left !important;
}

.u-text-align-center {
    text-align: center !important;
}

.u-text-align-end {
    text-align: right !important;
}

.u-text-align-middle {
    vertical-align: middle !important;
}

.u-text-align-baseline {
    vertical-align: baseline !important;
}


// All Caps
// ---
//
// Set text uppercase, letterspaced for legibility.

.u-text-uppercase {
    text-transform: uppercase !important;
}


// Capitalize Text
// ---
//
// Capitalize first letter of string.

.u-text-capitalize {
    text-transform: capitalize !important;
}


// Lowercase Text
// ---
//
// Lowercase all text in string.

.u-text-lowercase {
    text-transform: lowercase !important;
}

